--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div id="app">
         
         <div class="container">
-            <input type="text" v-model="message" class="input-text">
+            <input type="text"  class="input-text">
             <button class="btn-add">aggiungi</button>
             <ul>
                 <li class="" v-for="(todo, index) in todos">
-                    <p>{{todos[index].text}}</p>
+                    <p :class="{ active: todos[index].done === true}">{{todos[index].text}}</p>
                 </li>
 
             </ul>
