--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div id="app">
         
         <div class="container">
-            <input type="text"  class="input-text">
-            <button class="btn-add">aggiungi</button>
+            <input type="text" v-model="newTextTodo" class="input-text">
+            <button class="btn-add" @click="addTodo()">aggiungi</button>
             <ul>
                 <li class="flex" v-for="(todo, index) in todos">
                     <p :class="{ active: todos[index].done === true}">{{todos[index].text}}</p>
