--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="app">
         
         <div class="container">
-            <input type="text" v-model="newTextTodo" class="input-text">
+            <input type="text" v-model="newTextTodo" class="input-text" @keyup.enter="addTodo()">
             <button class="btn-add" @click="addTodo()">aggiungi</button>
             <ul>
                 <li class="flex" v-for="(todo, index) in todos">
