--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
     <div id="app">
         
         <div class="container">
-            <input type="text" v-model="newTextTodo" class="input-text" @keyup.enter="addTodo()">
-            <button class="btn-add" @click="addTodo()">aggiungi</button>
-            <ul>
-                <li class="flex" v-for="(todo, index) in todos" @click="changeBoolean(index)">
-                    <p :class="{ active: todos[index].done === true}">{{todos[index].text}}</p>
-                    <i class="fa-solid fa-xmark" @click="removeTodo(index)"></i>
-                </li>
-
-            </ul>
-        </div>
+            <input type="text" v-model.trim="newTextTodo" class="input-text" @keyup.enter="addTodo()">
+            <div >
+                <button class="btn-add" @click="addTodo()" >aggiungi</button>
+                <p class="error">{{errore}}</p>
+                <ul>
+                    <li class="flex" v-for="(todo, index) in todos" @click="changeBoolean(index)">
+                        <p :class="{ active: todo.done === true}">{{todo.text}}</p>
+                        <i class="fa-solid fa-xmark" @click.stop="removeTodo(index)"></i>
+                    </li>
+                </ul>
+                
+            </div>
+        </div>   
     </div>
     <script src="./js/app.js"></script>
 </body>
